# textstat

./: .all-contributorsrc  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: count.rs  lib.rs
tests/: integration.rs
