[package]
name = "textstat"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
description = "Readability metrics for English text: Flesch Reading Ease, Flesch-Kincaid, Gunning Fog, SMOG, ARI, Coleman-Liau, plus word/sentence/syllable counts. Zero-dependency, no_std."
documentation = "https://docs.rs/textstat"
repository = "https://github.com/trananhtung/textstat"
homepage = "https://github.com/trananhtung/textstat"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["readability", "flesch", "text", "nlp", "readability-score"]
categories = ["text-processing", "no-std", "science"]
authors = ["trananhtung"]
exclude = ["/.github", "/.gitignore"]

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
